# mlimecfg

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.in  Messages.sh  README  TODO  acinclude.m4  configure  configure.in  configure.in.in  kcm_mlimecfg.spec  kde4-kcm_mlimecfg.spec  mlimecfg.kdevelop.pcs  mlimecfg.kdevses  mlimecfg.tdevelop
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
po/: Makefile.in  kcm_mlimecfg.pot
po/zh_CN/: kcm_mlimecfg.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  mlimecfg.cpp  mlimecfg.desktop  mlimecfg.h  mlimecfg_base.ui  mlimecfg_cl.cpp  mlimecfg_cl.h
src/ime/: fcitx  scim
templates/: h
